[project]
name = "recipe-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "judgy>=0.1.0",
    "litellm>=1.75.5.post1",
    "matplotlib>=3.10.5",
    "monsterui>=1.0.23",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-fasthtml>=0.12.24",
    "rank-bm25>=0.2.2",
    "rich>=14.1.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0",
]
